--- a/Frontend-PI/Frontend-PI.csproj
+++ b/Frontend-PI/Frontend-PI.csproj
@@ -268,6 +268,7 @@
     <Content Include="Views\Publication\Details.cshtml" />
     <Content Include="Views\Publication\Create.cshtml" />
     <Content Include="Views\Publication\Delete.cshtml" />
+    <Content Include="Views\Publication\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Commande\Index.cshtml" />
