chart +rech crit

--- a/Frontend-PI/Frontend-PI.csproj
+++ b/Frontend-PI/Frontend-PI.csproj
@@ -188,12 +188,8 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CommandeController.cs" />
-
-
     <Compile Include="Controllers\DeliveryManController.cs" />
-
     <Compile Include="Controllers\CommentController.cs" />
-
     <Compile Include="Controllers\FeedBackController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -204,6 +200,7 @@
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Commande.cs" />
+    <Compile Include="Models\Comment.cs" />
     <Compile Include="Models\DeliveryManStat.cs" />
     <Compile Include="Models\DeliveryMan.cs" />
     <Compile Include="Models\FeedBack.cs" />
@@ -271,20 +268,16 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
-    <Content Include="Views\User\Index.cshtml" />
-    <Content Include="Views\User\Details.cshtml" />
     <Content Include="Views\User\Create.cshtml" />
     <Content Include="Views\User\LoginUser.cshtml" />
     <Content Include="Views\User\Delete.cshtml" />
     <Content Include="Views\User\ConfirmUser.cshtml" />
     <Content Include="Views\User\UpdatePassword.cshtml" />
     <Content Include="Views\User\ResetPassword.cshtml" />
-
     <Content Include="Views\DeliveryMan\index.cshtml" />
     <Content Include="Views\DeliveryMan\Edit.cshtml" />
     <Content Include="Views\DeliveryMan\Create.cshtml" />
     <Content Include="Views\DeliveryMan\CommandeByDeliveryMan.cshtml" />
-
     <Content Include="Views\User\UpdateUser.cshtml" />
     <Content Include="Views\Publication\Index.cshtml" />
     <Content Include="Views\Publication\Details.cshtml" />
@@ -297,7 +290,11 @@
     <Content Include="Views\Comment\Details.cshtml" />
     <Content Include="Views\Comment\Delete.cshtml" />
     <Content Include="Views\Comment\Edit.cshtml" />
-
+    <Content Include="Views\User\Index.cshtml" />
+    <Content Include="Views\User\Edit.cshtml" />
+    <Content Include="Views\User\Details.cshtml" />
+    <Content Include="Views\User\userByFirstLastname.cshtml" />
+    <Content Include="Views\User\statLockUnlockUser.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Commande\Index.cshtml" />
@@ -308,10 +305,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Views\FeedBack\" />
-
-    <Folder Include="Views\Publication\" />
-
-
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
