delivery man work

--- a/Frontend-PI/Frontend-PI.csproj
+++ b/Frontend-PI/Frontend-PI.csproj
@@ -182,11 +182,8 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CommandeController.cs" />
-
     <Compile Include="Controllers\DeliveryManController.cs" />
-
     <Compile Include="Controllers\CommentController.cs" />
-
     <Compile Include="Controllers\FeedBackController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -272,12 +269,10 @@
     <Content Include="Views\User\ConfirmUser.cshtml" />
     <Content Include="Views\User\UpdatePassword.cshtml" />
     <Content Include="Views\User\ResetPassword.cshtml" />
-
     <Content Include="Views\DeliveryMan\index.cshtml" />
     <Content Include="Views\DeliveryMan\Edit.cshtml" />
     <Content Include="Views\DeliveryMan\Create.cshtml" />
     <Content Include="Views\DeliveryMan\CommandeByDeliveryMan.cshtml" />
-
     <Content Include="Views\User\UpdateUser.cshtml" />
     <Content Include="Views\Publication\Index.cshtml" />
     <Content Include="Views\Publication\Details.cshtml" />
@@ -289,7 +284,9 @@
     <Content Include="Views\Comment\Details.cshtml" />
     <Content Include="Views\Comment\Delete.cshtml" />
     <Content Include="Views\Comment\Edit.cshtml" />
-
+    <Content Include="Views\DeliveryMan\AffecterCommande.cshtml" />
+    <Content Include="Views\DeliveryMan\AffecterLivreur.cshtml" />
+    <Content Include="Views\DeliveryMan\AffecterLivreurExecute.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Commande\Index.cshtml" />
@@ -300,10 +297,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Views\FeedBack\" />
-
-    <Folder Include="Views\Publication\" />
-
-
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
