--- a/Frontend-PI/Frontend-PI.csproj
+++ b/Frontend-PI/Frontend-PI.csproj
@@ -302,6 +302,9 @@
     <Content Include="Views\Comment\Details.cshtml" />
     <Content Include="Views\Comment\Delete.cshtml" />
     <Content Include="Views\Comment\Edit.cshtml" />
+    <Content Include="Views\Publication\IndexAdmin.cshtml" />
+    <Content Include="Views\Publication\Edit.cshtml" />
+    <Content Include="Views\Comment\IndexAdminComment.cshtml" />
     <Content Include="Views\DeliveryMan\AffecterCommande.cshtml" />
     <Content Include="Views\DeliveryMan\AffecterLivreur.cshtml" />
     <Content Include="Views\DeliveryMan\AffecterLivreurExecute.cshtml" />
