added details publication admin

--- a/Frontend-PI/Frontend-PI.csproj
+++ b/Frontend-PI/Frontend-PI.csproj
@@ -294,6 +294,7 @@
     <Content Include="Views\Publication\IndexAdmin.cshtml" />
     <Content Include="Views\Publication\Edit.cshtml" />
     <Content Include="Views\Comment\IndexAdminComment.cshtml" />
+    <Content Include="Views\Publication\DetailsAdmin.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Commande\Index.cshtml" />
