--- a/Frontend-PI/Frontend-PI.csproj
+++ b/Frontend-PI/Frontend-PI.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props" Condition="Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
@@ -190,6 +190,7 @@
     <Compile Include="Controllers\CommandeController.cs" />
     <Compile Include="Controllers\DeliveryManController.cs" />
     <Compile Include="Controllers\CommentController.cs" />
+    <Compile Include="Controllers\DMController.cs" />
     <Compile Include="Controllers\FeedBackController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -199,8 +200,10 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\AffectCommande.cs" />
     <Compile Include="Models\Commande.cs" />
     <Compile Include="Models\Comment.cs" />
+    <Compile Include="Models\AffectationDto.cs" />
     <Compile Include="Models\DeliveryManStat.cs" />
     <Compile Include="Models\DeliveryMan.cs" />
     <Compile Include="Models\FeedBack.cs" />
@@ -291,21 +294,20 @@
     <Content Include="Views\Comment\Details.cshtml" />
     <Content Include="Views\Comment\Delete.cshtml" />
     <Content Include="Views\Comment\Edit.cshtml" />
-
     <Content Include="Views\DeliveryMan\AffecterCommande.cshtml" />
     <Content Include="Views\DeliveryMan\AffecterLivreur.cshtml" />
     <Content Include="Views\DeliveryMan\AffecterLivreurExecute.cshtml" />
-
-
     <Content Include="Views\DeliveryMan\AffecterCommande.cshtml" />
     <Content Include="Views\DeliveryMan\AffecterLivreur.cshtml" />
-    <Content Include="Views\DeliveryMan\AffecterLivreurExecute.cshtml" />
-
     <Content Include="Views\Publication\IndexAdmin.cshtml" />
     <Content Include="Views\Publication\Edit.cshtml" />
     <Content Include="Views\User\statLockUnlockUser.cshtml" />
     <Content Include="Views\User\userByFirstLastname.cshtml" />
-
+    <Content Include="Views\DeliveryMan\AffecterCommandeLivreur.cshtml" />
+    <Content Include="Views\DM\AffecterCommande.cshtml" />
+    <Content Include="Views\DM\Index.cshtml" />
+    <Content Include="Views\DM\ListAffect.cshtml" />
+    <Content Include="Views\DeliveryMan\Statistique.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Commande\Index.cshtml" />
